Fix(accessibility): Bug Color contrast of marked items is not correct (#5184)

--- a/ui/components/progress-indicator/base/_index.scss
+++ b/ui/components/progress-indicator/base/_index.scss
@@ -115,7 +115,7 @@
   &.slds-is-completed .slds-progress__marker_icon,
   &.slds-is-completed .slds-progress__marker--icon {
     border-color: var(--slds-g-color-neutral-base-100, #{$progress-color-background});
-    color: var(--slds-g-color-brand-base-60, #{$progress-bar-color-background-fill});
+    color: var(--slds-g-color-brand-base-50, #{$progress-bar-color-background-fill});
   }
 
   /**
